vendor/pin-project-lite-0.2.6/tests/ui/pin_project/conflict-drop.stderr
error[E0119]: conflicting implementations of trait `_::MustNotImplDrop` for type `Foo<_, _>`:
 --> $DIR/conflict-drop.rs:3:1
  |
3 | / pin_project! { //~ ERROR E0119
4 | |     struct Foo<T, U> {
5 | |         #[pin]
6 | |         future: T,
7 | |         field: U,
8 | |     }
9 | | }
  | | ^
  | | |
  | |_first implementation here
  |   conflicting implementation for `Foo<_, _>`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
